--- a/Dockerfile.template.metering
+++ b/Dockerfile.template.metering
@@ -55,6 +55,9 @@ COPY run.py run.py
 WORKDIR /
 
 COPY start.sh.metering start.sh
+COPY reset_lgw.sh ./
+
+RUN chmod +x reset_lgw.sh
 
 # run when container lands on device
 CMD ["bash", "start.sh"]
