--- a/Dockerfile.template.metering
+++ b/Dockerfile.template.metering
@@ -51,13 +51,13 @@ COPY --from=buildstep /opt/ttn-gateway/mp_pkt_fwd .
 COPY --from=buildstep /usr/local/lib/libpaho-embed-* /usr/lib/
 COPY --from=buildstep /usr/lib/libttn* /usr/lib/
 COPY run.py run.py
+COPY reset_lgw.sh .
+
+RUN chmod +x reset_lgw.sh
 
 WORKDIR /
 
 COPY start.sh.metering start.sh
-COPY reset_lgw.sh ./
-
-RUN chmod +x reset_lgw.sh
 
 # run when container lands on device
 CMD ["bash", "start.sh"]
